リファクタリング

--- a/app/views/items/buy.haml
+++ b/app/views/items/buy.haml
@@ -11,7 +11,7 @@
           .buy-content__product__inner
             .buy-content__product__inner__box
               .buy-content__product__inner__box--image
-                = image_tag "#{@item.images[0].image_url}", height: "64px" , width: "64px"
+                = image_tag "#{@item.image}", height: "64px" , width: "64px"
               .buy-content__product__inner__box--detail
                 .buy-content__product__inner__box--detail--name
                   = @item.name
