--- a/app/views/mypage/profile.haml
+++ b/app/views/mypage/profile.haml
@@ -9,13 +9,13 @@
     .profile-container
       .profile-contents
         %h2.profile-contents__title プロフィール
-        %form.profile-items
+        = form_with model: @user, url: user_path(current_user.id), local: true, class: "profile-items" do |f|
           .profile-blocks 
             .profile-blocks-top
-              %img.profile-blocks-top__img{alt: "profileimg", src: "http://gahag.net/img/201605/22s/gahag-0088473936-1.jpg"}/
-              %input.profile-blocks-top__nickname{laceholder: "", type: "text", value: "#{@user.nickname}"}/
+              = image_tag "#{@user.icon}", class: "profile-blocks-top__img", alt: "profileimg"
+              = f.text_field :nickname, placeholder: "", value: "#{@user.nickname}", class: "profile-blocks-top__nickname"
             .profile-blocks-under
-              %textarea.profile-blocks-under__profiletext{name: "profiletext", placeholder: "例）こんにちは☆ご覧いただきありがとうございます！かわいいものやきれいめオフィスカジュアル中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるように心がけていますので、商品や発送方法などご質問がありましたらお気軽にどうぞ♪"}
-              %input.profile-blocks-under__submitbtn{type: "submit", value: "変更する"}/
+              = f.text_area :introduce, class: "profile-blocks-under__profiletext", placeholder: "例）こんにちは☆ご覧いただきありがとうございます！かわいいものやきれいめオフィスカジュアル中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるように心がけていますので、商品や発送方法などご質問がありましたらお気軽にどうぞ♪"
+              = f.submit "変更する", class: "profile-blocks-under__submitbtn"
 = render "shared/top_page_footer"
 = render "shared/exhibit_logo"
